--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -21,11 +21,12 @@
     "@angular/router": "~8.2.4",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
+    "serialize-javascript": "^3.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.3",
+    "@angular-devkit/build-angular": "^0.901.0",
     "@angular/cli": "~8.3.3",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
@@ -35,7 +36,7 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
